@@ -3,6 +3,9 @@
 	* Zlib.pm
 	  Change version number 1.02.
 
+	* t/0signature.t
+	  Added signature test.
+
 	* MANIFEST
 	  Added SIGNATURE to manifest.
 
